# InspectorTodo

./: .gitignore  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/inspectortodo/: __init__.py  config.py  find_invalid_todos.py  main.py  todo.py  todo_finder.py  todo_validation.py
src/inspectortodo/parser/: BaseTodoParser.py  BashTodoParser.py  Context.py  CsharpTodoParser.py  FtlTodoParser.py  GraphqlTodoParser.py  JavaScriptTodoParser.py  JavaTodoParser.py  PhpTodoParser.py  PythonTodoParser.py  Todo.py  XmlTodoParser.py  YamlTodoParser.py  __init__.py
src/inspectortodo/validator/: __init__.py  base_validator.py  jira_validator.py  regexp_validator.py  versions_validator.py
tests/inspectortodo/: test_config.py  test_main.py  test_todo_finder.py
tests/inspectortodo/parser/: test_base_todo_parser.py  test_xml_todo_parser.py
tests/inspectortodo/project_for_testing/ftl/: about.ftl
tests/inspectortodo/project_for_testing/graphql/: schema.graphql
tests/inspectortodo/project_for_testing/java/: IgnoreJUnit5Test.java  IgnoreTest.java  Versions.java
tests/inspectortodo/project_for_testing/java_script/: HelloWorld.vue
tests/inspectortodo/project_for_testing/python/: find_my_todos.py
tests/inspectortodo/project_for_testing/typescript/: test.ts
tests/inspectortodo/project_for_testing/xml/: test.xml
tests/inspectortodo/project_for_testing/yml/: test.yaml  test.yml
tests/inspectortodo/validator/: test_base_validator.py  test_jira_validator.py  test_regexp_validator.py
(+2 files in other folders)
