[metadata]
name = inspectortodo
version = 1.0.0
author = Wolfgang Münder
author_email = wolfgang.muender@gmail.com
description = InspectorTodo is a Python tool to track the status of todos in a software project, assuming that the project uses an issue tracker, e.g. JIRA.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wolfgangmuender/InspectorTodo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Information Technology
    Topic :: Software Development :: Quality Assurance
    Environment :: Console
[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
include_package_data = True
install_requires =
    click>=6.7
    click-log>=0.2.1
    GitPython>=2.1.9
    jira>=1.0.15, <3.0.0
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    inspectortodo = inspectortodo.main:main
